#28 Upgrading to java 17. (#45)
Co-authored-by: jzonthemtn <jeff.zemerick@philterd.ai>