@@ -78,7 +78,7 @@
 		<dropwizard.metrics.version>4.1.7</dropwizard.metrics.version>
 		<dropwizard-metrics-cloudwatch.version>1.0.13</dropwizard-metrics-cloudwatch.version>
 		<dropwizard-metrics-datadog.version>1.1.14</dropwizard-metrics-datadog.version>
-		<equals.verifier.version>3.5.5</equals.verifier.version>
+		<equals.verifier.version>3.14.2</equals.verifier.version>
 		<ff3.version>1.0</ff3.version>
 		<guava.version>30.1-jre</guava.version>
 		<hapi.fhir.version>4.2.0</hapi.fhir.version>
@@ -92,7 +92,7 @@
 		<log4j.version>2.19.0</log4j.version>
 		<lucene.version>8.3.0</lucene.version>
 		<micrometer.version>1.10.2</micrometer.version>
-		<mockito.version>1.10.19</mockito.version>
+		<mockito.version>5.4.0</mockito.version>
 		<nv-i18n.version>1.27</nv-i18n.version>
 		<opennlp.version>2.1.0</opennlp.version>
 		<pdfbox.version>2.0.23</pdfbox.version>
@@ -117,7 +117,7 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>11</release>
+					<release>17</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -137,7 +137,7 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<argLine>-Xmx8g</argLine>
+					<argLine>-Xmx8g --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 					<excludes>
 						<exclude>**/*IT.java</exclude>
 					</excludes>
